get rid of sbt, only use mvn now